Page MenuHome GnuPG

Kleopatra: Add workaround for locking issue on key generation
Testing, HighPublic

Description

We have seen that key generation of RSA keys sometimes hangs on Windows because the key creation process does not get the lock for pubring.kbx.
Cause seems to be that the lock is (for a yet unknown reason) not released by one of the two key listing processes which are triggered by the creation of the secret key file.

To work around this we want to suspend the file watcher which triggers the key listing until the key creation process is completely finished.

Details

Version
VSD 3.3.2, 3.3.3-beta-16

Event Timeline

ebo created this task.
ebo created this object with edit policy "Contributor (Project)".
ikloecker renamed this task from Kleopatra: Add workaround for locking issue to Kleopatra: Add workaround for locking issue on key generation.Sep 30 2025, 12:32 PM
ikloecker updated the task description. (Show Details)
ikloecker added a project: vsd34.

Fixed and backported for VSD 3.4 and VSD 3.3.

ikloecker changed the task status from Open to Testing.Sep 30 2025, 2:30 PM
ikloecker moved this task from Backlog to WiP on the vsd33 board.
ikloecker moved this task from Backlog to WIP on the vsd34 board.
ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 6 2025, 9:16 AM

The regression that the Welcome screen didn't go away after generating the very first key has been fixed. The fix has been backported for VSD 3.4 and VSD 3.3.

ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 13 2025, 9:49 AM
timegrid added a subscriber: timegrid.

Looks good to me on gpg4win-5.0.0-beta395 @ win11 (tested with/without keyboxd, 20 keygen rsa3072 each, with/without password)

Looks good to me on vsd-3.3.3-beta90.29 @ win11

timegrid edited projects, added vsd33 (vsd-3.3.3); removed vsd33.