Suspend automatic key listing during key generation

This should prevent a hang that happens intermittently (on Windows)
caused by gpg and gpgsm fighting over a lock of pubring.kbx.

GnuPG-bug-id: 7827
(cherry picked from commit 9dbc11b4bb7f411df3e54f0a7fbd4f96acfca06a)